# faceless-video-gen

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: output_example.md
faceless_video_gen/: __init__.py  cli.py  llm.py  main.py  prompts.py  tts.py  video.py  visuals.py
tests/: test_main.py
